[build-system]
requires = ["setuptools>=42", "wheel", "toga"]

[project]
name = "vortex_pocket"
version = "0.1.0"
description = "GET YOUR DMNC!"
authors = [
    { name="Pierre Jacksoo", email="pierrejacksoo@example.com" }
]
license = { text = "MIT" }

[tool.setuptools]
packages = [""]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
crypto = ["pycryptodome", "bcrypt"]
pdf = ["reportlab"]
qr = ["qrcode"]
color = ["colorama"]
db = ["supabase"]

[project.scripts]
vortex_pocket = "vortex:main"
